# GizmoTweak2

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt
app/: CMakeLists.txt
app/qml/: ConnectionItem.qml  ConnectionPreview.qml  CurveIconButton.qml  GearButton.qml  KeyboardShortcutsDialog.qml  KeyframeParameterRow.qml  Main.qml  NodeCanvas.qml  NodeItem.qml  NodeToolbar.qml  ParameterGroup.qml  ParameterRow.qml  PortItem.qml  PreviewPanel.qml  PropertiesPanel.qml  ReadOnlyParameterRow.qml  StyledCheckBox.qml  StyledComboBox.qml  StyledGroupBox.qml  StyledMenuItem.qml  StyledSpinBox.qml  Theme.qml  TimelinePanel.qml  Toast.qml  TrackItem.qml
app/resources/: gizmoTweakPatterns.ild
app/resources/templates/: basic_chain.gt2  mirror_effect.gt2  multi_gizmo.gt2  rotating_circle.gt2  wave_effect.gt2
app/src/: ExcaliburEngine.cpp  ExcaliburEngine.h  FileIO.cpp  FileIO.h  FramePreviewItem.cpp  FramePreviewItem.h  NodePreviewItem.cpp  NodePreviewItem.h  PatternImageProvider.cpp  PatternImageProvider.h  PatternThumbnail.cpp  PatternThumbnail.h  RecentFilesManager.cpp  RecentFilesManager.h  main.cpp
doc/: ARCHITECTURE.md  ROADMAP.md
lib/: CMakeLists.txt
lib/src/: gizmotweaklib2.cpp  gizmotweaklib2.h
lib/src/automation/: AutomationTrack.cpp  AutomationTrack.h  KeyFrame.cpp  KeyFrame.h  Param.h
lib/src/core/: Commands.cpp  Commands.h  Connection.cpp  Connection.h  GraphEvaluator.cpp  GraphEvaluator.h  Node.cpp  Node.h  NodeGraph.cpp  NodeGraph.h  Port.cpp  Port.h
lib/src/engine/: LaserEngine.h
lib/src/nodes/: ColorFuzzynessTweak.cpp  ColorFuzzynessTweak.h  ColorTweak.cpp  ColorTweak.h  FuzzynessTweak.cpp  FuzzynessTweak.h  GizmoNode.cpp  GizmoNode.h  GroupNode.cpp  GroupNode.h  InputNode.cpp  InputNode.h  MirrorNode.cpp  MirrorNode.h  OutputNode.cpp  OutputNode.h  PolarTweak.cpp  PolarTweak.h  PositionTweak.cpp  PositionTweak.h  RotationTweak.cpp  RotationTweak.h  RounderTweak.cpp  RounderTweak.h  ScaleTweak.cpp  ScaleTweak.h  SparkleTweak.cpp  SparkleTweak.h  SplitTweak.cpp  SplitTweak.h  SqueezeTweak.cpp  SqueezeTweak.h  SurfaceFactoryNode.cpp  SurfaceFactoryNode.h  TimeShiftNode.cpp  TimeShiftNode.h  WaveTweak.cpp  WaveTweak.h
scripts/: run_tests.bat
test/: CMakeLists.txt  tst_automation.cpp  tst_commands.cpp  tst_evaluate_up_to.cpp  tst_gizmotweaklib2.cpp  tst_graph_evaluator.cpp  tst_node_formulas.cpp  tst_node_persistence.cpp  tst_nodegraph.cpp  tst_port_connection.cpp  tst_zoom.cpp
